# TFC-Sistema-Multiagente-Licencias

./: .gitignore  README.md
anses_agent_crewai/: __main__.py  agent.py  agent_executor.py  instruction.md  pyproject.toml
anses_agent_crewai/tools/: __init__.py  emitir_constancia_cuil.py
cenat_agent_langgraph/: pyproject.toml
cenat_agent_langgraph/app/: __main__.py  agent.py  agent_executor.py  instruction.md
cenat_agent_langgraph/app/tools/: __init__.py  boletas_service.py
centro_salud_agent_adk/: __main__.py  agent.py  agent_executor.py  instruction.md  pyproject.toml
centro_salud_agent_adk/tools/: __init__.py  calendario.py  generar_boleta_pago.py  obtener_resultado_medico.py  validar_pago_reservar_turno.py
direccion_transito_agent_adk/: pyproject.toml
direccion_transito_agent_adk/host/: agent.py  instruction.md  remote_agent_connection.py
direccion_transito_agent_adk/host/tools/: __init__.py  carga_nacional.py  gestionar_turnos_clases_examenes.py  validar_asistencia.py  validar_examen_practico.py  verificar_antecedentes_nacionales.py
